--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>BitCo</title>
 
 
    <!-- CSS -->
@@ -16,7 +16,7 @@
    <!-- Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
    <!-- Icons -->
       <!-- Font Awessome -->
@@ -37,8 +37,91 @@
 
 </head>
 <body>
-   
+   <header>
+      <img src="assets/img/bitco-high-resolution-logo-yellow-on-transparent-background.png" alt="logo">
+      <nav>
+         <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Sales</a></li>
+         </ul>
+      </nav>
+      <div class="toggle-switch-theme" title="Active/Deactivate Dark Mode">
+         <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+         </label>
+      </div>
+   </header>
 
+   <section class="creative-business">
+      <div class="content">
+         <h1>A better way to grow your creative business</h1>
+         <p>Now you can list a product onde, seli it everywhere and grow your sales faster.</p>
+         <form action="#">
+            <input type="email" name="email" id="email" class="input-email">
+            <button class="get-started" type="button">Get Started</button>
+         </form>
+      </div>
+      <div class="image">
+         <img src="assets/img/undraw_woman.svg" alt="woman">
+      </div>
+   </section>
+
+   <section class="keep-inventory">
+      <div class="image">
+         <img src="assets/img/undraw_maker_launch.svg" alt="maker launch">
+      </div>
+      <div class="content">
+         <h2>Keep your inventory in sync</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium?</p>
+         <button class="get-started-minimalist" type="button">Get Started</button>
+      </div>
+   </section>
+
+   <section class="make-product">
+      <div class="content">
+         <h2>Make product changes once</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, necessitatibus.</p>
+         <button class="get-started-minimalist" type="button">Get Started</button>
+      </div>
+      <div class="image">
+         <img src="assets/img/undraw_maker_launch.svg" alt="maker launch">
+      </div>
+   </section>
+
+   <section class="start">
+      <div>
+         <div class="texts">
+            <h3>Start your free trial</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt reprehenderit non provident enim maiores architecto ipsa nulla dignissimos vero officiis totam.</p>
+         </div>
+         <div class="button">
+            <button class="get-started" type="button">Get Started</button>
+         </div>
+      </div>
+   </section>
+
+   <section class="contact">
+      <div class="image">
+         <img src="assets/img/undraw_people_search.svg" alt="people search">
+      </div>
+      <div class="content">
+         <h2>Contact us</h2>
+         <form action="#">
+            <label for="email-user">Enter your email so we can contact you and answer your questions!</label>
+            <input type="email" name="email-user" id="email-user">
+            <button class="send-email" type="button">Send email</button>
+         </form>
+      </div>
+   </section>
+
+   <footer>
+      <img src="assets/img/bitco-high-resolution-logo-white-on-transparent-background.png" alt="logo">
+      <p class="copy">&copy;<span class="year">XXXX</span>. All rights reserved</p>
+      <p class="developing">Developed by <a href="https://github.com/guilhermedevmatos15" target="_blank">@Guilherme Ferreira</a></p>
+   </footer>
 
    <!-- Modal's -->
 
