agora sim, por hoje tá fieito

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </head>
 <body>
-   <header>
+   <header data-aos="fade-down">
       <img src="assets/img/bitco-high-resolution-logo-yellow-on-transparent-background.png" alt="logo">
       <nav>
          <ul>
@@ -56,54 +56,50 @@
    </header>
 
    <section class="creative-business">
-      <div class="content">
+      <div class="content" data-aos="fade-right">
          <h1>A better way to grow your creative business</h1>
          <p>Now you can list a product onde, seli it everywhere and grow your sales faster.</p>
          <form action="#">
-            <input type="email" name="email" id="email" class="input-email">
+            <input type="email" name="email" id="email" class="input-email" placeholder="Enter you email">
             <button class="get-started" type="button">Get Started</button>
          </form>
       </div>
-      <div class="image">
+      <div class="image" data-aos="fade-left">
          <img src="assets/img/undraw_woman.svg" alt="woman">
       </div>
    </section>
 
-   <section class="keep-inventory">
-      <div class="image">
+   <section class="keep-inventory section">
+      <div class="image" data-aos="fade-right">
          <img src="assets/img/undraw_maker_launch.svg" alt="maker launch">
       </div>
-      <div class="content">
+      <div class="content" data-aos="fade-left">
          <h2>Keep your inventory in sync</h2>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium?</p>
          <button class="get-started-minimalist" type="button">Get Started</button>
       </div>
    </section>
 
-   <section class="make-product">
-      <div class="content">
+   <section class="make-product section">
+      <div class="content" data-aos="fade-right">
          <h2>Make product changes once</h2>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, necessitatibus.</p>
          <button class="get-started-minimalist" type="button">Get Started</button>
       </div>
-      <div class="image">
-         <img src="assets/img/undraw_maker_launch.svg" alt="maker launch">
+      <div class="image" data-aos="fade-left">
+         <img src="assets/img/undraw_people_search.svg" alt="maker launch">
       </div>
    </section>
 
-   <section class="start">
+   <section class="start" data-aos="fade">
       <div>
-         <div class="texts">
-            <h3>Start your free trial</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt reprehenderit non provident enim maiores architecto ipsa nulla dignissimos vero officiis totam.</p>
-         </div>
-         <div class="button">
-            <button class="get-started" type="button">Get Started</button>
-         </div>
+         <h3>Start your free trial</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt reprehenderit non provident enim maiores architecto ipsa nulla dignissimos vero officiis totam.</p>
+         <button class="get-started" type="button">Get Started</button>
       </div>
    </section>
 
-   <section class="contact">
+   <section class="contact" data-aos="zoom-in">
       <div class="image">
          <img src="assets/img/undraw_people_search.svg" alt="people search">
       </div>
