--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <img src="assets/img/bitco-high-resolution-logo-yellow-on-transparent-background.png" alt="logo">
       <nav>
          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Sales</a></li>
+            <li><a href="#section-keep">Keep</a></li>
+            <li><a href="#section-make">Make</a></li>
+            <li><a href="#section-start">Start</a></li>
+            <li><a href="#section-contact">Contact</a></li>
          </ul>
       </nav>
       <div class="toggle-switch-theme" title="Active/Deactivate Dark Mode">
@@ -53,10 +53,11 @@
             <span class="slider round"></span>
          </label>
       </div>
+      <i class="fa-solid fa-bars"></i>
    </header>
 
    <section class="creative-business">
-      <div class="content" data-aos="fade-right">
+      <div class="content" data-aos="fade-up">
          <h1>A better way to grow your creative business</h1>
          <p>Now you can list a product onde, seli it everywhere and grow your sales faster.</p>
          <form action="#">
@@ -64,50 +65,52 @@
             <button class="get-started" type="button">Get Started</button>
          </form>
       </div>
-      <div class="image" data-aos="fade-left">
+      <div class="image" data-aos="fade-up">
          <img src="assets/img/undraw_woman.svg" alt="woman">
       </div>
    </section>
 
-   <section class="keep-inventory section">
-      <div class="image" data-aos="fade-right">
+   <section class="keep-inventory section" id="section-keep">
+      <div class="image" data-aos="fade-up">
          <img src="assets/img/undraw_maker_launch.svg" alt="maker launch">
       </div>
-      <div class="content" data-aos="fade-left">
+      <div class="content" data-aos="fade-up">
          <h2>Keep your inventory in sync</h2>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium?</p>
          <button class="get-started-minimalist" type="button">Get Started</button>
       </div>
    </section>
 
-   <section class="make-product section">
-      <div class="content" data-aos="fade-right">
+   <section class="make-product section" id="section-make">
+      <div class="content" data-aos="fade-up">
          <h2>Make product changes once</h2>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel vitae ullam quod doloremque ea omnis quo, voluptatibus molestias, sint nam corporis velit accusantium rem dolorum ducimus! Nemo, voluptas praesentium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, necessitatibus.</p>
          <button class="get-started-minimalist" type="button">Get Started</button>
       </div>
-      <div class="image" data-aos="fade-left">
+      <div class="image" data-aos="fade-up">
          <img src="assets/img/undraw_people_search.svg" alt="maker launch">
       </div>
    </section>
 
-   <section class="start" data-aos="fade">
-      <div>
+   <section class="start" id="section-start">
+      <div data-aos="zoom-in">
          <h3>Start your free trial</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt reprehenderit non provident enim maiores architecto ipsa nulla dignissimos vero officiis totam.</p>
          <button class="get-started" type="button">Get Started</button>
       </div>
    </section>
 
-   <section class="contact" data-aos="zoom-in">
-      <div class="image">
-         <img src="assets/img/undraw_people_search.svg" alt="people search">
+   <section class="contact section" id="section-contact">
+      <div class="image" data-aos="fade-up">
+         <img src="assets/img/undraw_completed.svg" alt="completed send email">
       </div>
-      <div class="content">
+      <div class="content" data-aos="fade-up">
          <h2>Contact us</h2>
          <form action="#">
-            <label for="email-user">Enter your email so we can contact you and answer your questions!</label>
-            <input type="email" name="email-user" id="email-user">
+            <label for="send-input">Enter your email so we can contact you and answer your questions!</label>
+            <div class="input-group">
+               <input type="email" name="send-input" id="send-input" placeholder="Email"><div></div>
+            </div>
             <button class="send-email" type="button">Send email</button>
          </form>
       </div>
@@ -115,12 +118,30 @@
 
    <footer>
       <img src="assets/img/bitco-high-resolution-logo-white-on-transparent-background.png" alt="logo">
-      <p class="copy">&copy;<span class="year">XXXX</span>. All rights reserved</p>
-      <p class="developing">Developed by <a href="https://github.com/guilhermedevmatos15" target="_blank">@Guilherme Ferreira</a></p>
+      <p class="copy">&copy;<span class="year"></span>. All rights reserved</p>
+      <p class="developed">Developed by <a href="https://github.com/guilhermedevmatos15" target="_blank" title="Go to Github">@Guilherme Ferreira</a></p>
    </footer>
 
-   <!-- Modal's -->
 
+
+   <!-- Modal's -->
+   <div class="menu active">
+      <i class="fa-solid fa-xmark"></i>
+      <nav>
+         <ul>
+            <li><a href="#section-keep">Keep</a></li>
+            <li><a href="#section-make">Make</a></li>
+            <li><a href="#section-start">Start</a></li>
+            <li><a href="#section-contact">Contact</a></li>
+         </ul>
+      </nav>
+      <div class="toggle-switch-theme" title="Active/Deactivate Dark Mode">
+         <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+         </label>
+      </div>
+   </div>
 
    <!-- Javascript/scripts -->
    <script src="assets/js/main.js" type="module"></script>
