--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
    <!-- Modal's -->
-   <div class="menu active">
+   <div class="menu">
       <i class="fa-solid fa-xmark"></i>
       <nav>
          <ul>
